<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <!--    <EditText-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginLeft="10dp"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:layout_marginRight="10dp"-->
    <!--        android:hint="Enter Truck number"-->
    <!--        android:minHeight="48dp" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="216dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/add_truck"
            android:textColor="#212121"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="103dp"
            android:text="@string/enter_truck_number"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="130dp"
            android:layout_marginRight="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/truck_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="212dp"
            android:text="@string/truck_type"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="359dp"
            android:layout_height="61dp"
            android:layout_marginTop="55dp"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <!--            <EditText-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginLeft="10dp"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginRight="10dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:text="1" />-->

            <Button
                android:id="@+id/truckType1"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:padding="9dp"
                android:text="@string/truck_type_0"
                android:textColor="#212121"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/truckType2"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/truck_type_1"
                android:textColor="#212121"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/truckType3"
                app:layout_constraintStart_toEndOf="@+id/truckType1"
                app:layout_constraintTop_toTopOf="parent" />

            <!--            <EditText-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginLeft="10dp"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginRight="10dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:text="1" />-->

            <Button
                android:id="@+id/truckType3"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/truck_type_2"
                android:textColor="#212121"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--            <EditText-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginLeft="10dp"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginRight="10dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:text="1" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_border"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="Add Document"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/ic_add_trip" />

            <View
                android:layout_width="20dp"
                android:layout_height="10dp" />

        </LinearLayout>

        <Button
            android:id="@+id/submitAddnewTruck"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="#1C439D"
            android:text="Done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.142" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>